V1 release fix #2 (#70)
* Update core package

* Right Nav Style: Background of selected item should retain colour (like right nav)

* Right Nav spills over right boundary of content container - visible when nav item in active state

* Header and Footer are currently using the dark mode images in light mode making the text invisible

* Content correction

* Fix image cut off issue

* Header hr cut off on tablet & mobile

* links on hover background transparent

* Correct all external links to target blank

* Home page column fix

--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -18,9 +18,11 @@ $footer-height: 240px;
   }
 
   .right-nav {
-    padding-left: 40px;
-    @include grid.un-laptop-layout {
+    @include grid.un-tablet-layout {
       display: none;
+    }
+    a:focus {
+      background: var(--navigation-weak);
     }
   }
 
